[project]
name = "laboratory-work-9"
version = "0.1.0"
description = ""
authors = [
    {name = "Oleksii-dot278",email = "obukrieiev2023@itcollege.lviv.ua"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "google-adk (>=1.31.1,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
